--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,130 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+body,
+html {
+  /* overflow-x: hidden; */
+  color: var(--primary-color);
+}
+:root {
+  --primary-color: #232323;
+  --secondary-color: #f6f6f6;
+  --font-color: #000000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0 !important;
+}
+
+a {
+  text-decoration: none !important;
+  color: var(--text-color) !important;
+}
+
+.wrapper {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 3.65rem);
+  padding-left: var(--bs-gutter-x, 3.65rem);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (max-width: 1180px) {
+  .wrapper {
+    padding: 0 2rem;
+  }
+}
+
+@media (max-width: 820px) {
+  .wrapper {
+    padding: 0 20px;
+  }
+}
+
+.btn {
+  border-radius: 0% !important;
+  font-size: 18px !important;
+  padding: 2px 15px !important;
+  font-weight: bold !important;
+}
+
+.btn:focus,
+.btn:active {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+button.bg-dark {
+  color: #ffffff !important;
+  background-color: var(--primary-color) !important;
+  border: 1px solid var(--primary-color) !important;
+}
+
+button.bg-dark:hover {
+  color: var(--primary-color) !important;
+  background-color: #ffffff !important;
+  border: 1px solid var(--primary-color) !important;
+}
+
+button.bg-light {
+  color: var(--primary-color) !important;
+  background-color: #ffffff !important;
+  border: 1px solid var(--primary-color);
+}
+
+button.bg-light:hover {
+  color: #ffffff !important;
+  background-color: var(--primary-color) !important;
+  border: var(--primary-color) 1px solid;
+}
+.mr-15 {
+  margin-right: 15px !important;
+}
+
+.mr-20 {
+  margin-right: 20px !important;
+}
+
+.mt-10 {
+  margin-top: 10px !important;
+}
+
+.mt-15 {
+  margin-top: 15px !important;
+}
+
+.ant-input,
+.ant-input-number-input,
+.ant-select,
+.ant-input-password {
+  border: 2px solid #000000;
+  border-radius: none;
+  border-radius: 0;
+  box-shadow: none !important;
+  outline: none !important;
+}
+
+.ant-table-thead > tr > th {
+  color: #ffffff;
+  background: #000000;
+  border-bottom: 1px solid #000000;
+}
+
+.ant-table-tbody > tr > td {
+  border-bottom: 1px solid #000000;
+  font-weight: 500;
+}
+
+.ant-input-number-input {
+  height: 35px;
 }
